--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".GroupFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="group fragment" />
+        android:id="@+id/groups_list"/>
 
 </FrameLayout>
