requests recycler view

--- a/app/src/main/res/layout/request_item.xml
+++ b/app/src/main/res/layout/request_item.xml
@@ -12,45 +12,36 @@
         android:gravity="center_vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:id="@+id/profile_picture"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/username"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:text="username"
+            android:layout_marginLeft="15dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/accept"
+            android:background="@drawable/buttons"
+            android:text="Accept"
+            android:layout_marginLeft="15dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:id="@+id/refuse"
+            android:background="@drawable/buttons"
+            android:text="Refuse"
             android:layout_marginLeft="15dp"/>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_below="@id/user_info">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/accept"
-        android:background="@drawable/buttons"
-        android:padding="10dp"
-        android:text="Accept"
-        android:layout_marginRight="20dp"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/refuse"
-        android:background="@drawable/buttons"
-        android:padding="10dp"
-        android:text="Refuse" />
-
-    </LinearLayout>
 
 </RelativeLayout>
