groups recycler view

--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".GroupFragment">
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/groups_list"/>
+        android:id="@+id/groups_recycler_view"/>
 
 </FrameLayout>
