--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -14,7 +14,8 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:id="@+id/group_picture"
-        android:layout_marginBottom="100dp" />
+        android:layout_marginBottom="100dp"
+        android:src="@drawable/ic_profile"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -33,6 +34,6 @@
         android:background="@drawable/buttons"
         android:layout_marginTop="15dp"
         android:padding="10dp"
-        android:text="Update"/>
+        android:text="Create"/>
 
 </LinearLayout>
